# OthelloAI

./: CMakeLists.txt  build  gather
app/: main.cpp
core/: JCOthello.cpp  JCOthello.hpp
exp/: expmain.cpp
gtest/: gtestmain.cpp
include/ics46/factory/: DuplicateTypeRegistrationException.hpp  DynamicFactory.hpp  DynamicFactoryRegistration.hpp  RegisteredType.hpp  UnregisteredNameException.hpp  UnregisteredTypeException.hpp
include/ics46/observable/: Observable.hpp
include/othellogame/: OthelloAI.hpp  OthelloBoard.hpp  OthelloCell.hpp  OthelloException.hpp  OthelloGameState.hpp  OthelloGameStateFactory.hpp
include/othelloui/: OthelloApplication.hpp
